--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <nav class="navbar navbar-expand-lg navbar-black  ">
         <div class="container-fluid">
       <a class="navbar-brand" href="#"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -108,35 +108,17 @@
      <div class="my-portfolio">
 <h1 class="heading-portfolio">My Portfoilio</h1>
 
-<figure class="story">
-    <img src="./images/9.jpg" alt="Pic 2" class="pic-2 all-pics">
-    <!-- <figcaption class="fig">this is my work</figcaption> -->
-</figure>
+    <img src="./images/9.jpg" alt="Pic 2" class="all-pics">
 
-<figure class="story">
-    <img src="./images/6.jpg" alt="pic 3" class="pic-3 all-pics">
-    <!-- <figcaption class="fig">this is my work</figcaption> -->
-</figure>
+    <img src="./images/6.jpg" alt="pic 3" class="all-pics">
 
-<figure class="story">
-<img src="./images/5.jpg" alt="pic 3" class="pic-3 all-pics">
-    <!-- <figcaption class="fig">this is my work</figcaption> -->
-</figure>
+    <img src="./images/5.jpg" alt="pic 3" class="all-pics">
 
-<figure class="story">
-    <img src="./images/2.jpg" alt="Pic 4" class="pic-4 all-pics">
-    <!-- <figcaption class="fig">this is my work</figcaption> -->
-</figure>
+    <img src="./images/2.jpg" alt="Pic 4" class="all-pics">
 
-<figure class="story">
-    <img src="./images/7.jpg" alt="Pic 5" class="pic-5 all-pics">
-    <!-- <figcaption class="fig">this is my work</figcaption> -->
-</figure>
+    <img src="./images/7.jpg" alt="Pic 5" class="all-pics">
 
-<figure class="story">
-    <img src="./images/8.jpg" alt="Pic 6" class="pic-6 all-pics">
-    <!-- <figcaption class="fig">this is my work</figcaption> -->
-</figure>
+    <img src="./images/8.jpg" alt="Pic 6" class="all-pics">
 
 </div>
  </section>
@@ -185,19 +167,16 @@
 <h1 class="story-heading">Happy Clients</h1>
 
 <div class="story__main-text">
-
-
-        <img src="./images/2.jpg" alt="" class="story-img-1">
+  <img src="./images/2.jpg" alt="" class="story-img-1">
 
 <p class="story-text">
     “Far far away, behind the word mountains, far from the countries Vokalia 
     and Consonantia, there live the blind texts.Separated they live in Bookmarksgrove
     right at the coast of the Semantics, a large language ocean.”
 </p>
-
 <img src="./images/7.jpg" alt="" class="story-img-2">
 
-<p class="story-text-2">
+<p class="story-text-2 story-text-responsive">
     “Far far away, behind the word mountains, far from the countries Vokalia 
     and Consonantia, there live the blind texts.Separated they live in Bookmarksgrove
     right at the coast of the Semantics, a large language ocean.”
@@ -209,19 +188,18 @@
 <div class="story__main-text-2">
 
     <div class="story-sub-section">
+        <img src="./images/8.jpg" alt="" class="story-img-1 story-img-responsive-3">
 
-        <img src="./images/8.jpg" alt="" class="story-img-1">
-
-<p class="story-text">
+<p class="story-text story-text-responsive-3">
     “Far far away, behind the word mountains, far from the countries Vokalia 
     and Consonantia, there live the blind texts.Separated they live in Bookmarksgrove
     right at the coast of the Semantics, a large language ocean.”
 </p>
 
 </div>
-<img src="./images/jonas.jpg" alt="" class="story-img-2">
+<img src="./images/jonas.jpg" alt="" class="story-img-2 story-img-responsive-4">
 
-<p class="story-text-2">
+<p class="story-text-2 story-text-responsive-4">
     “Far far away, behind the word mountains, far from the countries Vokalia 
     and Consonantia, there live the blind texts.Separated they live in Bookmarksgrove
     right at the coast of the Semantics, a large language ocean.”
