this is a not of not final project

--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
 <div class="story__main-text">
   <img src="./images/2.jpg" alt="" class="story-img-1">
 
-<p class="story-text">
+<p class="story-text story-text-responsive-1">
     “Far far away, behind the word mountains, far from the countries Vokalia 
     and Consonantia, there live the blind texts.Separated they live in Bookmarksgrove
     right at the coast of the Semantics, a large language ocean.”
 </p>
-<img src="./images/7.jpg" alt="" class="story-img-2">
+<img src="./images/7.jpg" alt="" class="story-img-2 story-img-2-responsive">
 
 <p class="story-text-2 story-text-responsive">
     “Far far away, behind the word mountains, far from the countries Vokalia 
