this is portfolio check for ismail

--- a/index.html
+++ b/index.html
@@ -138,54 +138,54 @@
 <h1 class="heading-portfolio">My Projects</h1>
 <section class="project-section">
 <div class="card all-pics-1" style="width: 18rem;">
-  <img src="./images/9.jpg" class="card-img-top all-pics" alt="...">
+  <img src="./images/Screenshot (15).png" class="card-img-top all-pics" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Online Store</h5>
+    <p class="card-text">The Chrome Web Store is Google's online store for its Chrome web browser.</p>
+    <a href="../online-store/html/Homepage.html" class="btn btn-primary project-button">View Website</a>
   </div>
 </div>
 
 <div class="card all-pics-1 all" style="width: 18rem;">
-  <img src="./images/9.jpg" class="card-img-top " alt="...">
+  <img src="./images/Screenshot (12).png" class="card-img-top " alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Tin Dog</h5>
+    <p class="card-text">About TinDog. A home page website which provides details of the application to the end user.</p>
+    <a href="../../Bootstrape-installation/bootstrape -tindog/html/test.html" class="btn btn-primary project-button">View Website</a>
   </div>
 </div>
 <div class="card" style="width: 18rem;">
-  <img src="./images/9.jpg" class="card-img-top " alt="...">
+  <img src="./images/Screenshot (11).png" class="card-img-top " alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Epic DL</h5>
+    <p class="card-text">Authentication is a little finicky since we have to go through the Epic website..</p>
+    <a href="../../Bootstrape-installation/bootstrape-test Epic DL/Home.html" class="btn btn-primary project-button">View Website</a>
   </div>
 </div>
 </section>
 <section class="project-section-2">
 <div class="card all-pics-2 " style="width: 18rem;">
-  <img src="./images/9.jpg" class="card-img-top " alt="...">
+  <img src="./images/Screenshot (13).png" class="card-img-top " alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Natrous</h5>
+    <p class="card-text">Natrous Website Designer In Usa - Find results on Seekweb. Multiple sources combined.</p>
+    <a href="../natrous/index.html" class="btn btn-primary project-button">View Website</a>
   </div>
 </div>
 <div class="card all-pics-2 all" style="width: 18rem;">
-  <img src="./images/9.jpg" class="card-img-top " alt="...">
+  <img src="./images/Screenshot (16).png" class="card-img-top " alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Trilio</h5>
+    <p class="card-text">Trilio Website Designer In Usa - Find results on Seekweb. Multiple sources combined.</p>
+    <a href="../Trillo/starter/index.html" class="btn btn-primary project-button">View Website</a>
   </div>
 </div>
 <div class="card " style="width: 18rem;">
-  <img src="./images/9.jpg" class="card-img-top " alt="...">
+  <img src="./images/Screenshot (10).png" class="card-img-top " alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">Nexter</h5>
+    <p class="card-text">Nexter Website Designer In Usa - Find results on Seekweb. Multiple sources combined.</p>
+    <a href="../Nexter/starter/index.html" class="btn btn-primary project-button">View Website</a>
   </div>
 </div>
 </section>
