--- a/index.html
+++ b/index.html
@@ -89,17 +89,12 @@
 
 <!-- Header -->
         <div class="header-main">
-       <img src="./images/my-3.jpg" alt="my pic" class="my-pic">
-         <div class="site-blocks-cover overlay aos-init aos-animate" style="background-image: url(&quot;images/xhero_img.jpg.pagespeed.ic.WrSXj_3UV4.webp&quot;); background-position: 50% -25px;" data-aos="fade" data-stellar-background-ratio="0.5" id="home-section">
-          <div class="container">
-          <div class="row align-items-center justify-content-center text-center">
-          <div class="col-lg-8">
-          <h1 class="text-white aos-init aos-animate" data-aos="fade-up" data-aos-delay="0">I'm Wasiq Ahmad <br> A Web-Developer</h1>
+       <img src="./images/my pic.jpg" alt="my pic" class="my-pic">
+       <div class="heading-main">
+          <h1 data-text="I'm'Wasiq'Ahmad"class="text-white">I'm'Wasiq'Ahmad </h1>
+          <h1 Data-text="A'Web'Developer"class="text-white">A'Web'Developer</h1>
+        </div>
           </div>
-          </div>
-          </div>
-          </div>
-        </div>        
     </header>
 
     <!-- My Bio -->
@@ -163,7 +158,7 @@
   </div>
 </div>
 <div class="card-main">
-  <div class="card pic" style="width: 18rem;">
+  <div class="card pic " style="width: 18rem;">
     <div class="card-front card__side-3">
         <img src="./images/Screenshot (11).png" class="card-img-top " alt="...">
       </div>
@@ -174,30 +169,8 @@
       </div>
     </div>
   </div>
-
-
-<!-- 
-<div class="card " style="width: 18rem;">
-  <img src="./images/Screenshot (18).png" class="card-img-top " alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Tin Dog</h5>
-    <p class="card-text">About TinDog. A home page website which provides details of the application to the end.</p>
-    <a href="#" class="btn btn-primary project-button">View Website</a>
-  </div>
-</div>
-<div class="card pic" style="width: 18rem;">
-  <img src="./images/Screenshot (17).png" class="card-img-top " alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Epic DL</h5>
-    <p class="card-text">Authentication is a little finicky since we have to go through the Epic website called Epic Dl..</p>
-    <a href="#" class="btn btn-primary project-button">View Website</a>
-  </div>
-</div> -->
 </div>
 </section>
-
-
-
 
  <!-- Cards -->
 <h1 class="feature-header" id="Service">My Service</h1>
@@ -241,7 +214,7 @@
 <!-- Story Section -->
 
 <section class="story-section">
-  <h1 class="story-heading" id="Feed-Back">Happy Clients</h1>
+  <h1 class="story-heading" id="Feed-Back">Feed-Back</h1>
   
 
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
@@ -291,7 +264,7 @@
   </div>
       
 <!-- Footer -->
-<footer class=" footer text-center text-lg-start bg-light text-muted" id="Contact-us">
+<footer class=" footer text-center text-lg-start bg-dark text-muted" id="Contact-us">
   <!-- Section: Social media -->
   <section
     class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
@@ -323,7 +296,6 @@
         <i class="fab fa-github"></i>
       </a>
     </div>
-    <!-- Right -->
   </section>
   <!-- Section: Social media -->
 
